fixed spacing

--- a/src/styling/terminal.css
+++ b/src/styling/terminal.css
@@ -41,6 +41,10 @@ body {
     color: blinking;
   }
 
+  .outputClass {
+    white-space: break-spaces
+  }
+
   span.neofetchtext {
     color: rgb(220, 63, 54);
   }
